# completeness_NN_pipeline

./: .dockerignore  .gitignore  Dockerfile.api  HPC_DEPLOY_README.txt  Makefile  README.md  Save_detections.ipynb  Save_detections_training_set.ipynb  ci.py  generate_white_clusters.py  output.param  perform_ml_to_learn_completeness.py  perform_photometry_ci_cut_on_5filters.py  pyproject.toml  requirements-test.txt  requirements.txt  run_pipeline_with_slugpy.sh
.github/workflows/: ci.yml  publish-with-token.yml  publish.yml
checkpoints/: README.md  best_model_phot_model0.pt  best_model_phys_model0.pt  scaler_phys_model0.pkl
cluster_pipeline/catalogue/: catalogue_filters.py
cluster_pipeline/config/: pipeline_config.py
cluster_pipeline/data/: cluster_library.py  galaxy_metadata.py  schemas.py  slug_reader.py
cluster_pipeline/dataset/: dataset_builder.py
cluster_pipeline/detection/: sextractor_runner.py
completeness_nn_api/: README.md  __init__.py  inference.py  ngc628_completeness.py  serve.py
docs/: AUDIT_REPORT.md  CATALOGUE_INCLUSION_CRITERIA.md  COMPLETENESS_FIGURE.md  FILES_FOR_GIT.md  INDUSTRY_MLOPS_AND_HPC_RUNBOOK.md  INPUTS_AND_CONSTANTS.md  INSTALL_IRAF.md  LIBRARY_CLUSTER_SAMPLING_AND_REFF_FORMULAS.md  PIPELINE_FILES.md  PIPELINE_FILE_FLOW.md  PUBLISH.md  RUNNING.md  RUNNING_ON_HPC.md  RUN_PIPELINE_NGC1566_LOCAL_AND_GADI.md  run_generate_white_clusters.md
ngc628-c/: header_info_ngc628-c.txt  user_input_coords.txt  user_input_coords_500.txt
pyraf/: clcache.sqlite3
scripts/: SAVE_FOUR_FILES_SNIPPET.txt  __init__.py  apply_all_critera.py  check_pipeline_paths.py  deploy.py  estimate_storage.py  experiment_missing_f275w.py  generate_white_clusters.py  generate_x11_stubs.py  hpc_login_smoke_test.sh  inject_clusters_to_5filters.py  legus_original_pipeline.py  make_white_light.py  original_inject_to_5filters.py  original_photometry_on_5_and_CI.py  original_select_insert_white.py  package_for_hpc.sh  perform_ml_to_learn_completeness.py  perform_photometry_ci_cut_on_5filters.py  plot_completeness_mag_mass_age.py  plot_criteria_diagnostics.py  plot_three_panel_white_synthetic_recovered.py  plot_three_panel_white_synthetic_recovered_saved.py  plot_white_injection_diagnostics.py  preview_synthetic_image.py  run_full_with_iraf.sh  run_ngc1566_full_pipeline_gadi.sh  run_nn_gpu_pbs.sh  run_pipeline.py  run_pipeline_pbs.sh  run_publish_pypi_pbs.sh  run_real_storage_estimate.py  run_small_test.py  run_stage123_and_plot_diagnostics.py  sample_slug_white_mag.py  setup_env.sh  setup_legus_galaxy.py  submit_cpu_gpu_pypi.sh  submit_cpu_then_gpu.sh  test_photometry_iraf_smoke.py  (+1 more)
tests/: README.md  conftest.py  test_catalogue_filters.py  test_coordinate_matcher.py  test_dataset_builder.py  test_dataset_integrity.py  test_filesystem.py  test_label_builder.py  test_manifest.py  test_models.py  test_pipeline_config.py  test_schemas.py
tests/unit/: test_pipeline_runner.py  (+1 more)
(+219 files in other folders)
