[project]
name = "cluster-completeness-pipeline"
version = "0.1.0"
description = "Synthetic cluster injection, detection, matching, photometry, and NN completeness pipeline"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", ".deps", "__pycache__", "build", "dist", ".git", "*.ipynb", "Save_detections", "Save_detections_training_set"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/perform_photometry_ci_cut_on_5filters.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning", "ignore::RuntimeWarning"]
